--- a/src/chrome_extension/content/css/kemo.scss
+++ b/src/chrome_extension/content/css/kemo.scss
@@ -16,7 +16,7 @@
   font-weight: bold;
   color: #27792a;
   display: inline-block;
-  padding: 0 8px 0 0px;
+  padding: 0 8px 0 0;
   transition: 150ms;
   transition-timing-function: ease-in;
   animation: jump 1s ease 0.5s 1 normal;
